--- a/www/home.html
+++ b/www/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link href="static/css/index.min.css" rel="stylesheet">
+    <link href="static/css/index.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
   <body>
@@ -1141,8 +1141,8 @@
         </div>
         <p class="footer__copy">Copyright 2018 Unibot. All rights reserved.</p>
         <div class="footer__load">
-          <a class="footer__load-link" href="#!">Terms</a>
-          <a class="footer__load-link" href="#!">Privesy</a>
+          <a class="footer__load-link" href="#!">Условия использования</a>
+          <a class="footer__load-link" href="#!">Политика конфиденциальности</a>
         </div>
       </div>
     </footer>
@@ -1206,6 +1206,6 @@
       </div>
     </div>
     <!-- Scripts-->
-    <script src="static/js/index.min.js"></script>
+    <script src="static/js/index.js"></script>
   </body>
 </html>
